--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.facebook.fresco:fresco:1.5.0'
-
+    compile 'com.androidkun:XTabLayout:1.1.3'
 }
