--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.PicDetailActivity"></activity>
+        <activity android:name=".view.activity.PicDetailActivity" />
+        <activity
+            android:name=".view.activity.VideoDetailActivity"
+            android:label="@string/title_activity_video_detail"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
