--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     compile 'com.facebook.fresco:fresco:1.5.0'
     compile 'com.androidkun:XTabLayout:1.1.3'
     implementation files('libs/cordova-6.2.0-dev.jar')
+    compile 'com.linsea:universalvideoview:1.1.0@aar'
+    compile 'com.wang.avi:library:1.0.1'
 }
