--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.MainActivity">
+        <activity android:name=".view.activity.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.PicDetailActivity" />
+        <activity android:name=".view.activity.PicDetailActivity"  android:screenOrientation="portrait"/>
         <activity
             android:name=".view.activity.VideoDetailActivity"
             android:label="@string/title_activity_video_detail"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"  android:screenOrientation="portrait"/>
+        <activity android:name=".view.activity.PlayVideoActivity" android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
